--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <p>Click me to reveal the message...</p>
         </div>
         <div class="card-back">
-          <p>I miss you :></p>
+          <p>I miss you</p>
         </div>
       </div>
     </div>
