--- a/index.html
+++ b/index.html
@@ -98,8 +98,16 @@
           <p>Click me to reveal the message...</p>
         </div>
         <div class="card-back">
-          <p>I miss you</p>
+          <p>I never gets tired admiring you. You really are the one who gave me the most 
+             beautiful feelings. And when the days gets a little rough, I looked back to the conversations that we had, just to 
+             escape the reality somehow. Even after we lost all the connections that we had. I'm still deeply in love 
+             with you. 
+            
+
+             <a href="">I want you to see this. Please Click here</a>
+          </p>
         </div>
+        
       </div>
     </div>
   </div>
